--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
-    <head>
-    <h1> Hello Miicroverse </h1>
-    </head>
+<body>
+    <h1> Hello Microverse </h1>
+    
+</body>
+
+
+
+
 
 </html>
